# blackjack

./: Cargo.toml  LICENSE  README.md  config.toml
src/: card.rs  data.rs  game.rs  lib.rs  main.rs  model.rs  shoe.rs  training.rs
src/game/: card.rs  game.rs  mod.rs  shoe.rs
src/model/: dqn.rs  mod.rs
src/training/: data.rs  learner.rs  mod.rs  model.rs  ppo.rs  render.rs  simulation.rs  training.rs
