[package]
name = "blackjack"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
burn = { version = "0.16.0", features = ["train", "wgpu"] }
num-format = "0.4.4"
rand = "0.9.0"
rmp-serde = "1.3.0"
serde = { version = "1.0.219", features = ["derive"] }
strum = { version = "0.27.1", features = ["derive"] }
toml = "0.8.20"
bincode = "=2.0.0-rc.3"
bincode_derive = "=2.0.0-rc.3"
num_enum = "0.7.3"
env_logger = "0.11.7"
log = "0.4.26"
rayon = "1.10.0"
serde_json = "1.0.140"
